# ChangeLog for dev-vcs/mercurial
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mercurial/ChangeLog,v 1.138 2014/03/02 22:38:06 pacho Exp $

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> mercurial-2.8.2.ebuild:
  amd64 stable, bug #500346

  25 Feb 2014; Markus Meier <maekke@gentoo.org> mercurial-2.8.2.ebuild:
  arm stable, bug #500346

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> mercurial-2.8.2.ebuild:
  x86 stable wrt bug #500346

  22 Feb 2014; Akinori Hattori <hattya@gentoo.org> mercurial-2.8.2.ebuild:
  ia64 stable wrt bug #500346

  06 Feb 2014; Jeroen Roovers <jer@gentoo.org> mercurial-2.8.2.ebuild:
  Stable for HPPA (bug #500346).

*mercurial-2.9 (05 Feb 2014)

  05 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> -mercurial-2.8.1.ebuild,
  +mercurial-2.9.ebuild:
  Version bump. Removed old.

*mercurial-2.8.2 (03 Jan 2014)

  03 Jan 2014; Lars Wendler <polynomial-c@gentoo.org> -mercurial-2.8.ebuild,
  +mercurial-2.8.2.ebuild:
  Version bump. Removed old.

*mercurial-2.8.1 (03 Dec 2013)

  03 Dec 2013; Lars Wendler <polynomial-c@gentoo.org> +mercurial-2.8.1.ebuild:
  Version bump.

*mercurial-2.8 (04 Nov 2013)

  04 Nov 2013; Lars Wendler <polynomial-c@gentoo.org> -mercurial-2.7.1.ebuild,
  +mercurial-2.8.ebuild:
  Version bump. Removed old.

*mercurial-2.7.2 (02 Oct 2013)

  02 Oct 2013; Lars Wendler <polynomial-c@gentoo.org> -mercurial-2.7.ebuild,
  +mercurial-2.7.2.ebuild:
  Version bump. Removed old.

*mercurial-2.7.1 (06 Sep 2013)

  06 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> +mercurial-2.7.1.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> mercurial-2.5.4.ebuild,
  mercurial-2.6.3.ebuild, mercurial-2.7.ebuild, mercurial-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*mercurial-2.7 (11 Aug 2013)

  11 Aug 2013; Lars Wendler <polynomial-c@gentoo.org> -mercurial-2.6.2.ebuild,
  +mercurial-2.7.ebuild: