@@ -8,20 +8,32 @@ DIST mercurial-2.5.4.tar.gz 3673850 SHA256 c86fe9feb9aaada286fa297d9d68d1b16e2f8
 DIST mercurial-2.6.3.tar.gz 3736480 SHA256 12308a4210f1ee1185d03f18757742fa8a2759076c2e713f35432f89bf56911c SHA512 f739fb1455be998f0049b5266d8d5b1d8c3700526e853abc18bb215c8afc2b4d77e0c26d113cadab0c20483b9ecd98c9acce23e74e7a76492494b3b33389052c WHIRLPOOL fe12b34d16e5ee24f7da7b0c91a39f042ef4d97cc487f3998df1f52cc6586affa2cce012ab6bbc715dadcffc76d82fc80c2ad9258003d8dee5a5a0987a8b335c
 DIST mercurial-2.7.2.tar.gz 3787955 SHA256 b3f067eaa9fdf6818cc78526d4815ab4332252ffa07a2488c8b6939ac6b37c0b SHA512 d27dfff0b4c9feb5049098117d20fb2be211418969177a76ece772b4fdcaf780bf3c03cc388b70eef1622f32cc32c3a642a9239d35a30129c123705132228f6c WHIRLPOOL 17b90cd30e3d8ee99ce441afbf14239e595bb56410856e1439be0cc32b729d99804eb485dbf4137af71b5799ac5d0a909d4879fd5dfb30e4b0749e78d3e92176
 DIST mercurial-2.8.2.tar.gz 3839304 SHA256 c8a5baa21140c6cd6749c3b52b5e5e4a14b6b8ee7c518d9d9de09b1952efbe6f SHA512 9db5a8ed7b38c95db8bafac3efffb1735619ceb80564342bf1eb25be124f10075b8238d38a62b5cf34786a0463237e30619750c06220e2ab025f8da933b28844 WHIRLPOOL 25af73e866046225f211db1651a1b64214287609ae15b19fe383ee55ee50313779219f5424386aff124d70a658612c653958c7a2f69e150557133f8abb4dd2b7
+DIST mercurial-2.9.1.tar.gz 3851747 SHA256 a20fb1434ecbdb070ef955c7c292db9eb2676bfc1ac165e95ba73866623bc01a SHA512 a1734ff7228f02454fc3ae4a0ed95d11b44ac344702c55e5357b4d64c4e81a84fadfcecdc8f67bb1aa8ef1a5708181670626ac7a64dcc74f47b7842525091168 WHIRLPOOL 879c048e90f3e08b3100ad80e6f385a8f76d215b90b32e83e4cffccc48345584915a6ea7c56d85eff4dfd63bc9b51b9f2e2c3032e5b7d203269c4059eff91a1f
 DIST mercurial-2.9.tar.gz 3847667 SHA256 7078037ec51971c566dcf41c39d3052ecbc7ad1273605c166690ccd8bf80a622 SHA512 b00abf8b9e45a056307884849a6ed76ac92fec7db9e7d6b9d6305bf8089c401aa31888d81dceb97a2b4e4f1c319816e1d4c37699331d127044fb59210263ae39 WHIRLPOOL d74c96377ae3aef0fb011a73904eb3666d42d698c3f078754787eca4f145ef6a219ed46bde075027bb473e454d4ac40ebacdb53529a0c6d5eacbe04d0f236ac0
 EBUILD mercurial-2.4.2.ebuild 4211 SHA256 e9d9b07b93b06ae53566f32f603660718ee65ccc65a28396bf7c7b59346032e0 SHA512 9f38469f2f2ed21c35c4d69b1efc3430cee27b924de36e8ada008939fd888af446f1bb08ced85306debd17acf947913a60ed1daca8c4391b9e2df574c1c3694d WHIRLPOOL b7d23ebb35d194389c6764e4eebc5861ba6561254357c035bdec5e6ef0cf1d7597d026f2989bed654d8c6842bf2a9648eb077e3b33e18d19ea0127b935f90c91
 EBUILD mercurial-2.5.4.ebuild 4424 SHA256 61130d9b31af66308e61be64a33f918e1209443eb23db699a32f54257f9013ef SHA512 7ed8fafa52de32bec6250c6d7789f9f5a7c59fc8de4a6e2c9c5a482874655658d4287f0e7c71edf3fa753dc698f76bf3f7285b76eaaa067929e2370ea0525ab4 WHIRLPOOL fe208ad144a2bf792af7820bdd149b5b5123e1246230b5d0399c79ec2643e86036267afce4caf8ad1c6bac462f231b8f7582d26669306d6b8ccc8384dac0365a
 EBUILD mercurial-2.6.3.ebuild 4424 SHA256 15605868eebcbfd991af34201e39f12152cb3b2f62b68f9dddfc832f7c5803b0 SHA512 4b34f0f9f8f50be79c8cb92080a85e8e8a6abc5c74f626777e44e4721e0dd74eb9b8e8e6f1eeaba84cfd8405dff28799e135848c4e71746b9cac28dc9fa1a4df WHIRLPOOL 2b7c92de98fb85b497c5bbdffb2ba8baf1870a5ea04c1e4b3c76ec97eb9fbce0c8831a3bbc56ffe5e19cd2237667c092126878846ce4e75693a8d76f41b8b46f
 EBUILD mercurial-2.7.2.ebuild 4413 SHA256 9fec688244fa8119f40a5db65e5e666a9f5bf7d3bf0de961342a7af50e42d4fc SHA512 91973abba6422f9ebb8bcda8dd65b464b719db37da0b4fc85347c68c139858e7114cf486da15d9f09a87216e3ef0c3103a5a0db7c46b61e73021649e2d86dc1b WHIRLPOOL 5688e6ce13480d2e7c731dd55b1f61b3f665edc69b5a728e8b793823f99be72b6edf8ce6cb2f17f01a4c34c0f628c45976f3c075beda0257149d661053b7c4e3
 EBUILD mercurial-2.8.2.ebuild 4397 SHA256 214ae19b7d0371f3db4fb7778f63861b2b7c92f25706d530d95205c554ce4f71 SHA512 9263b32d3d9c9129bc008210332839f7b7a34fb129f87826cd36e8820ae096ce6aec93df6c24ec49eee92145620bfd1fd4de4fa233919def06373806a03e03e9 WHIRLPOOL 53307bcc3bf0c8f7a2aee9843849ff8aee62a7246d4aaaec1d887379ba600c2344593b6c95e1ef144df85d0d534e5f9bc3c29b931c10ace6fac7c98ab46a24ef
+EBUILD mercurial-2.9.1.ebuild 4048 SHA256 fa650d9d039f30e1de2da9a9a15a6af5eb4feb7115dadb48fe6fa1466d271531 SHA512 63e204f0504fc2efdfa1e912146d6b9ac95ff0500b5d79e94f28ac1ac193ac16fd9e6d59de94028ccfae70e240edb690694bfb6379e2fa31b83d694389155226 WHIRLPOOL ee6ddc0ea1c3cc093b1575bf21fd7ca86960d9ae1779fdce86fae7ab77362b970cce99383bb133b101044297b70325a201344a589c96f779fa8c51fa3ed23bfe
 EBUILD mercurial-2.9.ebuild 4407 SHA256 267871d18cc88c773459bb5dcc16a8ccdb053e2dbe292e443b4436e00b8d8bf1 SHA512 23db994ffe80241e0dbe5bb5cbb85d7180ff28d7cbf6fa240dec919a9f8192e41bc309b53ed902216a09bf1024501ebd3639434a7c82dccbff2544737751d382 WHIRLPOOL 6834eddfafc6e128dd403f65ec0dca9d9a6d9aa0fef56d2f356125677790b9d89f9cfafec3b81ff1917f7a19879d25c54aa1c46e12e8351f3fbaf3b1a070ea95
 EBUILD mercurial-9999.ebuild 4250 SHA256 b35d261d682f3c0e399ed54809dc074fcdf3056a653b318023e8f2bcbacd4e67 SHA512 2a783f6345b2338e9073a0a562e48a97e517ce3865fc7c84768e6aa3b0ee9c1d97f3dbca42c29538b2c9d49206b16f680ca43ecdc1accbea32895be31e55c7ff WHIRLPOOL 7e9bdf8eed29d66fedc32ad929038e0334de6c5f608b8116854a5893e1b7f8ff41334caca61c23b8eef95e871376459a72d3bf0d5f4b62839674d47d13cc7900
-MISC ChangeLog 37386 SHA256 339cb6fbaa9dadec6b6c9e1953b05e1d09c2a1410b9dde83525e4aca128f2cbc SHA512 f4a438a047bac5df496d6f2fe8253b7c9760661170afe61cfa9f5af7b07d5cbbfcf4e26599d1549b7766e12ff3e872066cd948f73edc95a1cbeb4ca3d98b6ccf WHIRLPOOL de0e57592be6398fba648bc877d90ffef6551c919aba34fe3ceaed97e462b6f271f06f865b4a9f7a3b0dd5fa5171ea44f73331bd7e2ef0251bb129b964e383be
+MISC ChangeLog 37521 SHA256 1d98949638b1007b67a5d1f80d75ff363eb36d6ea1413fbfdcac639b030b41c0 SHA512 ee92bb62cd06da6060e4a434c7ce26e1363c30a40342523c82ec6b00ad255c151db32777124df9cb216737dc19bf9b8f9f881b422d661b68bf0509b61519bae6 WHIRLPOOL ac3d0851d93f8628148568ebfa097c7dd1d96504f1985166a189bd38d345f4a31afed0867751d7b5852542fbf4d76929fad040cd4e8f7c04ee69469589063fba
 MISC metadata.xml 704 SHA256 76c0566b9a503099f6cf40750ffe09726dcf338e24378e780fb932cbebe1f0c1 SHA512 21a386ecca4b3d337c69019e750752df3f06137de8b8b27199b6218d4a5253bade522c5a9183340dfea61333bd783c14d60ff3f3e46cb58121c7100449722bfd WHIRLPOOL 7f64d01b4d31ae756e63e16be8add1bcba9a073961663ae481be883a5fcc6e3473d5da5f26d524502ade4eba0b2f3692934ed63f1e41bfa8d8b6a0a1532e11b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMTss8ACgkQCaWpQKGI+9Tj3QCeLkUOzthx3FO1EIbbGCYY9vKj
-6zAAn1IZmRA8wmnNgY47lcHh6VJ8w6HH
-=QZzH
+iQIcBAEBCAAGBQJTFY7QAAoJEPiazRVxLXTFTdQP/R0KUABekPPbKNndBYC9tvyJ
+hFBl+/1zJNUmP2S9N8f0ELBNwHL78SG/TGk4hgPY3ARdUp5tzuJbMOWoPn08mJ4Z
+gW2u/UsOdOJKg7yfreROlPCDmsTTstfkQvsMxsMzawck88hYmWcNioif9ZfDRD/5
+PGvMlQcCasSRFpj3SRXrCIE+YzTHew1j/PfkVSCk6ej2u3kdGNyiAViYmCYcpEEu
+3zsg/Io+ucfUjDBGrAmIA6rlqThZHzxA3LFFaKiOfItfJtE8+fg6Wygvsp6gxSts
+/SluFhcfZbmh4UGqwS4Je8LS+0ZnHZbPsyqa/JrQMZw/rh4N0c+fMNr9g0AocbeU
+NFHPF+TEskYW2SrxaHjEIdSotJ9dbzKypDLmctNKGCzv6iwlKm0Zt3cHe4MQoDev
+SGA0gErGb4y/X9ANX3NDLGB3FvmZMowxd/srMLGRQWkbtq9mRxneDZ20f5xNYxrZ
+0HDUJ86vmjHNPgxnIXwoE+UMvCuTXOsXr1iCk4DdTBLmauKi0XatFHle1ey0F56k
+PX3vbkkiIjJ29oeM+DdXnZsv42BtoLYeLXUrMKbuBqpbttBYntOwMWlhbtQeT9qe
+4IdgBX40cxFXlUr70u3AMew0xNdIUJs5HuGqcjHxKAzZrVlu1+qskHUDoVxcU7Il
+NGf66PCLDX4IrOtHTu7G
+=VcjQ
 -----END PGP SIGNATURE-----
