@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/mercurial
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mercurial/ChangeLog,v 1.138 2014/03/02 22:38:06 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mercurial/ChangeLog,v 1.139 2014/03/04 08:29:03 polynomial-c Exp $
+
+*mercurial-2.9.1 (04 Mar 2014)
+
+  04 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> +mercurial-2.9.1.ebuild:
+  Version bump.
 
   02 Mar 2014; Pacho Ramos <pacho@gentoo.org> mercurial-2.8.2.ebuild:
   amd64 stable, bug #500346
